--- a/vignettes/quartose.qmd
+++ b/vignettes/quartose.qmd
@@ -1,6 +1,18 @@
 ---
-title: "getting-started"
+title: "quartose"
+vignette: >
+  %\VignetteIndexEntry{quartose}
+  %\VignetteEngine{quarto::html}
+  %\VignetteEncoding{UTF-8}
 ---
+
+```{r, include = FALSE}
+knitr::opts_chunk$set(
+  collapse = TRUE,
+  comment = "#>"
+)
+```
+
 
 ```{r, include = FALSE}
 knitr::opts_chunk$set(
@@ -17,8 +29,6 @@ library(dplyr)
 library(purrr)
 library(ggplot2)
 library(quartose)
-library(babynames)
-library(janeaustenr)
 ```
 
 ## Tabs and sections
@@ -28,12 +38,12 @@ library(janeaustenr)
 ```{r}
 #| label: tabs-and-headers
 #| results: asis
-for(bb in c("Danielle", "Jasmine")) {
-  dat <- babynames |> filter(name == bb)
-  pic <- ggplot(dat, aes(year, prop, fill = sex)) + geom_col()
+for(sp in c("Adelie", "Chinstrap")) {
+  dat <- penguins |> filter(species == sp)
+  pic <- ggplot(dat, aes(bill_len, bill_dep, color = sex)) + geom_point()
   knit_print(quarto_tabset(
     content = list("Plot" = pic, "Data" = dat), 
-    title = bb,
+    title = sp,
     level = 4
   ))
 }
@@ -44,12 +54,12 @@ for(bb in c("Danielle", "Jasmine")) {
 ```{r}
 #| label: tabs-and-headers-2
 #| results: asis
-bbs <- paste0("Dan", c("", "i", "ni", "ny", "iel", "ielle", "iela"))
-dat <- map(bbs, \(bb) filter(babynames, name == bb))
-pic <- map(dat, \(dd) ggplot(dd, aes(year, prop, fill = sex)) + geom_col())
+isl <- c("Torgetsen", "Biscoe", "Dream")
+dat <- map(isl, \(ii) filter(penguins, island == ii))
+pic <- map(dat, \(dd) ggplot(dd, aes(bill_len, bill_dep, color = species)) + geom_point())
 quarto_group(list(
-  quarto_tabset(content = pic, names = bbs, title = "Plot", level = 4),
-  quarto_tabset(content = dat, names = bbs, title = "Data", level = 4)
+  quarto_tabset(content = pic, names = isl, title = "Plot", level = 4),
+  quarto_tabset(content = dat, names = isl, title = "Data", level = 4)
 ))
 ```
 
@@ -153,11 +163,4 @@ quarto_markdown(
   sep = "\n"
 )
 ```
-
-```{r}
-#| label: raw-2
-#| results: asis
-quarto_markdown(c(">", prideprejudice[8:16]), sep = " ")
-```
-
 
