--- a/vignettes/articles/quartose.qmd
+++ b/vignettes/articles/quartose.qmd
@@ -31,125 +31,56 @@ library(ggplot2)
 library(quartose)
 ```
 
-## Tabs and sections
-
-### Printing in a loop
-
-```{r}
-#| label: tabs-and-headers
-#| results: asis
-for(mm in c("audi", "subaru")) {
-  dat <- filter(mpg, manufacturer == mm)
-  pic <- ggplot(dat, aes(displ, hwy, color = year)) + geom_point()
-  knit_print(quarto_tabset(
-    content = list("Plot" = pic, "Data" = head(dat)), 
-    title = mm,
-    level = 4
-  ))
-}
-```
-
-### Printing as a group
-
-```{r}
-#| label: tabs-and-headers-2
-#| results: asis
-cls <- unique(mpg$class)
-dat <- map(cls, \(cl) filter(mpg, class == cl))
-pic <- map(dat, \(dd) ggplot(dd, aes(displ, hwy, color = year)) + geom_point())
-quarto_group(list(
-  quarto_tabset(content = pic, names = cls, title = "Plot", level = 4),
-  quarto_tabset(content = map(dat, head), names = cls, title = "Data", level = 4)
-))
-```
-
-## Divs and spans
-
-```{r}
-#| label: div-1
-#| results: asis
-quarto_div(
-  content = "This is some margin text.", 
-  class = "column-margin"
-)
-```
-
-
-```{r}
-#| label: div-2
-#| results: asis
-quarto_div(
-  content = c(
-    "Using character vectors is fine.",
-    "This is also just one margin text block.", 
-    "All the strings get pasted together,",
-    "with a separator."
-  ),
-  class = "column-margin",
-  sep = " /// "
-)
-```
-
-
-```{r}
-#| label: div-3
-#| results: asis
-quarto_div(
-  content = list(
-    "You can pass a list as the div content.", 
-    "That allows you to mix content,",
-    1:3,
-    c("of different types", "and lengths."),
-    "But pay attention to where separators appear,",
-    "and remember that **markdown parsing still applies**"
-  ),
-  class = "column-margin",
-  sep = " /// "
-)
-```
-
-
-```{r}
-#| label: div-4
-#| results: asis
-quarto_div(
-  content = "This is a callout note.",
-  class = "callout-note"
-)
-
-```
-
-
-```{r}
-#| label: div-5
-#| results: asis
-quarto_div(
-  content = "You can supply multiple classes",
-  class = c("column-margin", "callout-tip")
-)
-```
-
-
-```{r}
-#| label: span-1
-#| results: asis
-quarto_span(content = "this is highlighted", class = "mark")
-```
+The package was originally designed to support automatic tabsets (e.g., writing several plots, one per tab), and to my mind this is the most practical feature of quartose. However, pkgdown has limited support for quarto, so it is difficult to illustrate in this document. Instead, I'll start by illustrating some of the simpler features. You  can use `quarto_span()` to supply CSS classes to sections of text:
 
 ```{r}
 #| label: span-2
 #| results: asis
-quarto_div(
-  content = list(
-    quarto_span(content = "this is plain text"),
-    quarto_span(content = "this is highlighted", class = "mark"),
-    quarto_span(content = "this is underlined", class = "underline")
-  ),
-  sep = ", "
-)
+quarto_span(content = "this is highlighted", class = "mark")
 ```
 
-## Raw markdown
+If we print this object without the `results: asis` tag, you can see what actually gets written into the document:
+
+```{r}
+#| label: span-1
+quarto_span(content = "this is highlighted", class = "mark")
+```
+
+On its own this isn't entirely useful, but starts to become rather more practical if you wrap multiple `quarto_span()` sections within a `quarto_div()` object.
+
+```{r}
+#| label: div-span-1
+#| results: asis
+quarto_div(list(
+  quarto_span("As a simple illustration, you could write a paragraph that "),
+  quarto_span("highlighted some sections for emphasis ", class = "mark"),
+  quarto_span("but left other sections unmarked. "),
+  quarto_span("Some things could be underlined too. ", class = "underline"),
+  quarto_span("You get the idea, hopefully!")
+))
+```
+
+Again for illustrative purposes, we can remove the `results: asis` option to see what's happening under the hood:
+
+```{r}
+#| label: div-span-2
+quarto_div(list(
+  quarto_span("As a simple illustration, you could write a paragraph that "),
+  quarto_span("highlighted some sections for emphasis ", class = "mark"),
+  quarto_span("but left other sections unmarked. "),
+  quarto_span("Some things could be underlined too. ", class = "underline"),
+  quarto_span("You get the idea, hopefully!")
+))
+```
+
+The same idea can be used to generate the quarto syntax to insert section headers:
+
+```{r}
+#| label: section-1
+quarto_section("A level 3 heading", level = 3)
+```
+
+If the code here included the `results: asis` chunk option this would insert a heading into the document. Similarly, there are functions like `quarto_markdown()` that you can use to pass plain markdown:
 
 ```{r}
 #| label: raw-1
@@ -163,4 +94,35 @@ quarto_markdown(
   sep = "\n"
 )
 ```
+
+
+Unfortunately for this vignette, the limitations of pkgdown/quarto integration mean that some of the more fun things you can do with quartose are hard to illustrate here. In a regular quarto project, you could create callout boxes and margin text by defining a `quarto_div()` with the appropriate CSS classes. If I try that here, however, it doesn't quite work:
+
+```{r}
+#| label: div-4
+#| results: asis
+quarto_div(
+  content = "This would normally be a callout note.",
+  class = "callout-note"
+)
+
+```
+
+Similarly, because tabsets aren't a supported feature in pkgdown, I can't easily show what a `quarto_tabset()` looks like in this document. I can show you the quarto syntax that gets written to the document...
+
+```{r}
+#| label: tabs-and-headers-2
+cls <- unique(mpg$class)
+dat <- map(cls, \(cl) filter(mpg, class == cl))
+quarto_tabset(
+  content = map(dat, head), 
+  names = cls, 
+  title = "Data", 
+  level = 4
+)
+```
+
+...but I'll concede that's not the most helpful illustration. To that end, instead of trying to work around the limitations within pkgdown, it is probably easier to write a blog post at [blog.djnavarro.net](https://blog.djnavarro.net) showing how it works. 
+
+More on that to come, I suppose :)
 
