--- a/README.Rmd
+++ b/README.Rmd
@@ -21,9 +21,9 @@ knitr::opts_chunk$set(
 [![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://lifecycle.r-lib.org/articles/stages.html#experimental)
 <!-- badges: end -->
 
-When analysing data sets in R, it is often convenient to wrap the analysis within a quarto document for reporting purposes: containing all the analysis components within a single easy-to-navigate HTML document is generally a kindness for the reader. One consequence of this, however, is that sometimes you find yourself wanting to write code *within* an R code chunk that will generate parts of the quarto document for you. For instance, when iterating over many analyses within a single R chunk, you might want to have that chunk generate the quarto section headers, tabsets and so on. This is possible because the knitr engine (which evaluates the R code chunks) allows you to generate "asis" output that will later be captured by the quarto parser; if such output is formatted to look like correct quarto syntax, it will be captured and translated to the appropriate HTML. 
+When analyzing data sets in R, it is often convenient to wrap the analysis within a quarto document for reporting purposes: containing all the analysis components within a single easy-to-navigate HTML document is generally a kindness for the reader. One consequence of this, however, is that sometimes you find yourself wanting to write code *within* an R code chunk that will generate parts of the quarto document for you. For instance, when iterating over many analyses within a single R chunk, you might want to have that chunk generate the quarto section headers, tabsets and so on. This is possible because the knitr engine (which evaluates the R code chunks) allows you to generate "asis" output that will later be captured by the quarto parser; if such output is formatted to look like correct quarto syntax, it will be captured and translated to the appropriate HTML. 
 
-The purpose of the quartose package is to provide some helper functions to make this task a little easier. The reason for writing it is that while it is *conceptually* straightfoward to generate quarto syntax within R, there are some practical issues in juggling knitr, quarto, and R all at once if you want the resulting document to look clean. That's what I wrote quartose for: I want the nice, clean outputs that you get when you take care of all those little nuances, but also I don't want to have to add *lots* of tiresome formatting code into my analysis documents. So I decided to write a small package that handles this for me, so that I never have to think about it again. 
+The purpose of the quartose package is to provide some helper functions to make this task a little easier. The reason for writing it is that while it is *conceptually* straightforward to generate quarto syntax within R, there are some practical issues in juggling knitr, quarto, and R all at once if you want the resulting document to look clean. That's what I wrote quartose for: I want the nice, clean outputs that you get when you take care of all those little nuances, but also I don't want to have to add *lots* of tiresome formatting code into my analysis documents. So I decided to write a small package that handles this for me, so that I never have to think about it again. 
 
 
 ## Installation
