--- a/README.Rmd
+++ b/README.Rmd
@@ -56,3 +56,10 @@ print(tabs)
 knitr::knit_print(tabs)
 ```
 
+## Related work
+
+It is of course inevitable that the moment you start work on something and talk to people about it, it turns out that other people have done similar work. So far I've discovered two other approaches to the problem. They're not identical or equivalent to what I'm attempting to do here, but they're definitely thinking about the same ideas. To that end, I'd encourage anyone thinking about quartose to also look into these packages:
+
+- The [quartabs](https://github.com/sayuks/quartabs) package, by Sasaki Yusuke
+- The [qreport](https://hbiostat.org/r/qreport/) package, by Frank Harrell
+
